# semantica

./: README.md
backend/: alembic.ini  backend-server.spec  list_modules.py  pyproject.toml
backend/app/api/: main.py
backend/app/api/v1/routes/: ontology.py  rdf.py  sparql.py
backend/app/core/: db.py
backend/app/models/: __init__.py  ontology.py  rdf.py  sparql.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py
docs/: API.md  BUILD.md  DEV.md  MODELS.md  PRE-REQUISITES.md  SETUP.md
frontend/: nuxt.config.ts  package-lock.json  package.json
frontend/app/: app.vue
frontend/app/assets/css/: tailwind.css
frontend/app/components/: AppSidebar.vue  KpiCard.vue
frontend/app/components/dashboard/: KpiCard.vue  LoadedFilesTable.vue  NamespaceDistDonut.vue  OntologyOverview.vue  ReasoningEngine.vue  TopPredicatesBar.vue  TripleDistributionPie.vue
frontend/app/components/ontology/: ClassesTable.vue  DeleteOntology.vue  LoadOntology.vue  OntologiesTable.vue
frontend/app/components/rdf/: DeleteGraph.vue  GraphsTable.vue  LoadGraph.vue
frontend/app/components/sparql/: LeftPanel.vue  PerformanceMetrics.vue  RecentQueries.vue  RightPanel.vue  UpdateQueryGenerator.vue
frontend/app/composables/: useSparql.js
frontend/app/layouts/: default.vue
frontend/app/pages/: index.vue
frontend/app/types/: badge_variant.ts  loaded_files.ts  rdf.ts  visualise.ts
src-tauri/: .gitignore  Cargo.toml  splashscreen.html  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: .env  lib.rs  main.rs
(+9 files in other folders)
